<resources>
    <string name="app_name">fast-speed</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">信息</string>
    <string name="sync_header">配置</string>

    <!-- Messages Preferences -->
    <string name="signature_title">实时网速</string>
    <string name="reply_title">是否成功</string>

    <!-- Sync Preferences -->
    <string name="sync_title">开始切换</string>
    <string name="attachment_title">连接ssr</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">连接上ssr更高机率破解限速成功</string>
</resources>